--- a/index.html
+++ b/index.html
@@ -8,34 +8,42 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h2 id="clock">00:00:00</h2>
+    <main>
+      <div class="center">
+        <h2 id="clock">00:00:00</h2>
 
-    <form class="login-form hidden">
-      <input
-        required
-        maxlength="15"
-        type="text"
-        placeholder="What is your name?"
-      />
-      <input type="submit" value="Log In" />
-    </form>
+        <form class="login-form hidden">
+          <input
+            required
+            maxlength="15"
+            type="text"
+            placeholder="What is your name?"
+          />
+          <input type="submit" value="Log In" />
+        </form>
 
-    <h1 id="greeting" class="hidden"></h1>
+        <h1 id="greeting" class="hidden"></h1>
 
-    <form action="" id="todo-form">
-      <input required type="text" placeholder="Write a To Do and Press Enter" />
-    </form>
-    <ul id="todo-list"></ul>
+        <form action="" id="todo-form">
+          <input
+            required
+            type="text"
+            placeholder="Write a To Do and Press Enter"
+          />
+        </form>
+        <ul id="todo-list"></ul>
 
-    <div id="quote">
-      <span></span>
-      <span></span>
-    </div>
+        <div id="quote">
+          <span></span>
+          <span></span>
+        </div>
 
-    <div id="weather">
-      <span></span>
-      <span></span>
-    </div>
+        <div id="weather">
+          <span></span>
+          <span></span>
+        </div>
+      </div>
+    </main>
 
     <script src="js/greetings.js"></script>
     <script src="js/clock.js"></script>
